--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,8 @@ h1 {
 .container {
     background: rgba(0,0,0,0.4);
 }
+
+.footer.transparent.text-center {
+    background: rgba(0,0,0,0.4);
+    text-align: center;
+}
